--- a/css/styles.css
+++ b/css/styles.css
@@ -292,7 +292,7 @@ ul {
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.is-hiden {
+.is-hidden {
   visibility: hidden;
   pointer-events: none;
   opacity: 0;
@@ -305,6 +305,10 @@ ul {
 }
 
 .modal-form {
+  position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
   background-color: var(--modal-form);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -671,6 +675,11 @@ ul {
 }
 
 .portfolio-overlay {
+  transform: translateY(0%);
+}
+
+.portfolio-link:hover .portfolio-overlay,
+.portfolio-link:focus .portfolio-overlay {
   transform: translateY(0%);
 }
 
