--- a/css/styles.css
+++ b/css/styles.css
@@ -177,7 +177,7 @@ ul {
   letter-spacing: 0.02em;
   text-decoration: none;
   transition-property: color;
-  transition-duration: 250ms;
+  transition-duration: 2500ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-delay: 0;
 }
@@ -315,8 +315,8 @@ ul {
   width: 408px;
   height: 576px;
   padding: 24px;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    scale 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 2500ms cubic-bezier(0.4, 0, 0.2, 1),
+    scale 2500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close {
@@ -482,6 +482,10 @@ ul {
   border-radius: 50%;
   background-color: var(--active-links-color);
   align-items: center;
+  transition-property: color;
+  transition-duration: 2500ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0;
 }
 
 .team-social-link:hover,
@@ -517,6 +521,13 @@ ul {
 
 .customers-item {
   flex-basis: calc((100%-120px) / 6);
+}
+
+.customers-link {
+  transition-property: color;
+  transition-duration: 2500ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0;
 }
 
 .customers-item:hover svg,
@@ -592,6 +603,12 @@ ul {
   background: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
   padding: 8px;
+  width: 40px;
+  height: 40px;
+  transition-property: color;
+  transition-duration: 2500ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-delay: 0;
 }
 
 .footer-social-link:hover,
@@ -668,7 +685,7 @@ ul {
   left: 0;
   background-color: var(--active-links-color);
   transform: translateY(100%);
-  transition: transform 250ms ease;
+  transition: transform 2500ms ease;
   padding: 40px 32px;
   color: var(--light-mode-background-color);
 }
@@ -681,7 +698,6 @@ ul {
 .portfolio-item:hover,
 .portfolio-item:focus,
 .portfolio-item:active {
-  border: 1px solid var(--light-mode-background-color);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
